--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://asynchronousdev.github.io/codeline-frontend",
+  "homepage": "https://asyncdeveloper.github.io/codeline-frontend",
   "dependencies": {
     "gh-pages": "^2.0.1",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "axios": "^0.18.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
